added 5 main sections to map out in HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="header">Combat Tracker</div>
+    <div id="initiative-tracker">Initiative Tracker</div>
+    <div id="damage-tracker">Damage Tracker</div>
+    <div id="score-board">Scoreboard</div>
+    <div id="dice-roller">Dice Roller</div>
 </body>
 </html>
