added higher level divisions and class names

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="header">Combat Tracker</div>
-    <div id="initiative-tracker">Initiative Tracker</div>
-    <div id="damage-tracker">Damage Tracker</div>
-    <div id="score-board">Scoreboard</div>
-    <div id="dice-roller">Dice Roller</div>
+    <div id="top" class="main-section">
+        <div id="initiative-tracker">Initiative Tracker</div>
+        <div id="damage-tracker">Damage Tracker</div>
+    </div>
+    <div id="bottom" class="main-section">
+        <div id="score-board">Scoreboard</div>
+        <div id="dice-roller">Dice Roller</div>
+    </div>
+    <div id="footer">footer</div>
 </body>
 </html>
