added a class name to all of the sub main areas for more global css

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div id="header">Combat Tracker</div>
     <div id="top" class="main-section">
-        <div id="initiative-tracker">Initiative Tracker</div>
-        <div id="damage-tracker">Damage Tracker</div>
+        <div id="initiative-tracker" class="left-side sub-main">Initiative Tracker</div>
+        <div id="damage-tracker" class="right-side sub-main">Damage Tracker</div>
     </div>
     <div id="bottom" class="main-section">
-        <div id="score-board">Scoreboard</div>
-        <div id="dice-roller">Dice Roller</div>
+        <div id="score-board" class="left-side sub-main">Scoreboard</div>
+        <div id="dice-roller" class="right-side sub-main">Dice Roller</div>
     </div>
     <div id="footer">footer</div>
 </body>
