moved  header into an h1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header">Combat Tracker</div>
+    <div id="header">
+        <h1>Combat Tracker</h1>
+    </div>
     <div id="top" class="main-section">
         <div id="initiative-tracker" class="left-side sub-main">Initiative Tracker</div>
         <div id="damage-tracker" class="right-side sub-main">Damage Tracker</div>
