--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
         <div id="dice-roller" class="right-side sub-main">Dice Roller</div>
     </div>
     <div id="footer">footer</div>
+
+    <script src="jsFiles/dataItems.js"></script>
+    <script src="jsFiles/main.js"></script>
 </body>
 </html>
