added id to submit button for event listeners

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <option value="npc">NPC</option>
                 </select>
                 <input type="number" id="initiative">
-                <input type="submit" value="Add to initiative">
+                <input type="submit" id="addToInit" value="Add to initiative">
 
             </form>
                 
