added table element to start placing Initiative order into

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </select>
                 <input type="number" id="initiative">
                 <input type="submit" id="addToInit" value="Add to initiative">
+                <table id="initTable"></table>
                 <button id="resetInit">Reset Initiative</button>
 
                 
