changed and ID name

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <select name="atkType" id="atkType">
                 <option value=""></option>
             </select>
-            <label for="damageInflicted">Damage: </label>
-            <input type="number" id="damageInflicted">
+            <label for="dmgInflicted">Damage: </label>
+            <input type="number" id="dmgInflicted">
             <label for="dmgType">Damage Type: </label>
             <select name="dmgType" id="dmgType">
                 <option value=""></option>
