--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
             <select name="atkType" id="atkType">
                 <option value=""></option>
             </select>
-            <label for="dmgInflicted">Damage: </label>
-            <input type="number" id="dmgInflicted">
-            <label for="dmgType">Damage Type: </label>
-            <select name="dmgType" id="dmgType">
+            <label for="dmg1Inflicted">Damage 1: </label>
+            <input type="number" id="dmg1Inflicted">
+            <label for="dmg1Type">Damage 1 Type: </label>
+            <select name="dmg1Type" id="dmg1Type">
+                <option value=""></option>
+            </select>
+            <label for="dmg2Inflicted">Damage 2: </label>
+            <input type="number" id="dmg2Inflicted">
+            <label for="dmg2Type">Damage 2 Type: </label>
+            <select name="dmg2Type" id="dmg2Type">
                 <option value=""></option>
             </select>
             <label for="killSuccess">Kill: </label>
