--- a/index.html
+++ b/index.html
@@ -39,19 +39,17 @@
             </select>
             <label for="atkType">Attack Type: </label>
             <select name="atkType" id="atkType">
-                <option value=""></option>
             </select>
             <label for="dmg1Inflicted">Damage 1: </label>
             <input type="number" id="dmg1Inflicted">
             <label for="dmg1Type">Damage 1 Type: </label>
             <select name="dmg1Type" id="dmg1Type">
-                <option value=""></option>
             </select>
             <label for="dmg2Inflicted">Damage 2: </label>
             <input type="number" id="dmg2Inflicted">
             <label for="dmg2Type">Damage 2 Type: </label>
             <select name="dmg2Type" id="dmg2Type">
-                <option value=""></option>
+                <option value="none">none</option>
             </select>
             <label for="killSuccess">Kill: </label>
             <select name="killSuccess" id="killSuccess">
