added a button to loop through initiative

--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
                 <label for="chartype">Type:</label>
                 <select name="characterType" id="chartype">
             </section>
-            <section id="hideMe">
-                <label for="initiative">Init Roll:</label>
-                <input type="number" class="numInput" id="initiative">   
-            </section>
             <section>
                 <label for="initiative">Init Roll:</label>
                 <input type="number" class="numInput" id="initiative">
@@ -38,6 +34,7 @@
                 <input type="submit" id="addToInit" value="Add to initiative">    
             </select>
                 <table id="initTable"></table>
+                <button id="nextInit">Next Initiative</button>
                 <button id="resetInit">Reset Initiative</button>
         </div>
         <div id="damage-tracker" class="right-side sub-main">
