--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <div id="footer">footer</div>
 
     <script src="jsFiles/dataItems.js"></script>
+    <script src="jsFiles/initiative.js"></script>
     <script src="jsFiles/main.js"></script>
 </body>
 </html>
