--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
     <script src="jsFiles/dataItems.js"></script>
     <script src="jsFiles/initiative.js"></script>
+    <script src="jsFiles/damage.js"></script>
     <script src="jsFiles/main.js"></script>
 </body>
 </html>
