trying to get the Init order to save into local storage. Running into issues, cant think. saving and walking away for a bit

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </select>
                 <table id="initTable"></table>
                 <button id="nextInit">Next Initiative</button>
+                <h4 id="currentInitPosition"></h4>
                 <button id="resetInit">Reset Initiative</button>
         </div>
         <div id="damage-tracker" class="right-side sub-main">
