added a reset button in the footer to clear saved data fields

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <div id="score-board" class="left-side sub-main">Scoreboard</div>
         <div id="dice-roller" class="right-side sub-main">Dice Roller</div>
     </div>
-    <div id="footer">footer</div>
+    <div id="footer">
+        <button id="resetAll">Reset ALL</button>
+    </div>
 
     <script src="jsFiles/dataItems.js"></script>
     <script src="jsFiles/initiative.js"></script>
