messed around with API to help Stebbins... will keep some but fix others tomorrow

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     </div>
     <div id="footer">
         <button id="resetAll">Reset ALL</button>
+        <button id="dogShit">DOG SHIT</button>
     </div>
 
     <script src="jsFiles/dataItems.js"></script>
