--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 
     <script src="jsFiles/dataItems.js"></script>
-    <script>src="jsFiles/APIcalls.js"</script>
+    <script src="jsFiles/APIcalls.js"></script>
     <script src="jsFiles/initiative.js"></script>
     <script src="jsFiles/damage.js"></script>
     <script src="jsFiles/main.js"></script>
