created Data for PC characters to  save damage to be itterated through to add aup all damage or kills for display

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <script src="jsFiles/dataItems.js"></script>
     <script src="jsFiles/APIcalls.js"></script>
     <script src="jsFiles/initiative.js"></script>
+    <script src="jsFiles/scoreBoard.js"></script>
     <script src="jsFiles/damage.js"></script>
     <script src="jsFiles/main.js"></script>
 </body>
