added Table rows and columns for displayed damage data

--- a/index.html
+++ b/index.html
@@ -72,7 +72,43 @@
                 
     </div>
     <div id="bottom" class="main-section">
-        <div id="score-board" class="left-side sub-main">Scoreboard</div>
+        <div id="score-board" class="left-side sub-main">
+            <h3>
+                Scoreboard
+            </h3>
+            <table>
+                <tr>
+                    <th>PC</th>
+                    <th>Dmg Inflicted</th>
+                    <th>Kills</th>
+                </tr>
+                <tr class="row">
+                    <td class="pcNameColumn">PC1</td>
+                    <td class="totalDmgInfColumn">0</td>
+                    <td class="totalKillsColumn">0</td>
+                </tr>
+                <tr class="row">
+                    <td class="pcNameColumn">PC2</td>
+                    <td class="totalDmgInfColumn">0</td>
+                    <td class="totalKillsColumn">0</td>
+                </tr>
+                <tr class="row">
+                    <td class="pcNameColumn">PC3</td>
+                    <td class="totalDmgInfColumn">0</td>
+                    <td class="totalKillsColumn">0</td>
+                </tr>
+                <tr class="row">
+                    <td class="pcNameColumn">PC4</td>
+                    <td class="totalDmgInfColumn">0</td>
+                    <td class="totalKillsColumn">0</td>
+                </tr>
+                <tr class="row">
+                    <td class="pcNameColumn">PC5</td>
+                    <td class="totalDmgInfColumn">0</td>
+                    <td class="totalKillsColumn">0</td>
+                </tr>
+            </table>
+        </div>
         <div id="dice-roller" class="right-side sub-main">Dice Roller</div>
     </div>
     <div id="footer">
