rows are adding dynamically, PC Name is adding correctly, addARR function is NOT adding up numbers when called

--- a/index.html
+++ b/index.html
@@ -76,36 +76,21 @@
             <h3>
                 Scoreboard
             </h3>
-            <table>
+            <table id="scoreBoardTable">
                 <tr>
                     <th>PC</th>
                     <th>Dmg Inflicted</th>
                     <th>Kills</th>
                 </tr>
                 <tr class="row">
-                    <td class="pcNameColumn">PC1</td>
-                    <td class="totalDmgInfColumn">0</td>
-                    <td class="totalKillsColumn">0</td>
                 </tr>
                 <tr class="row">
-                    <td class="pcNameColumn">PC2</td>
-                    <td class="totalDmgInfColumn">0</td>
-                    <td class="totalKillsColumn">0</td>
                 </tr>
                 <tr class="row">
-                    <td class="pcNameColumn">PC3</td>
-                    <td class="totalDmgInfColumn">0</td>
-                    <td class="totalKillsColumn">0</td>
                 </tr>
                 <tr class="row">
-                    <td class="pcNameColumn">PC4</td>
-                    <td class="totalDmgInfColumn">0</td>
-                    <td class="totalKillsColumn">0</td>
                 </tr>
                 <tr class="row">
-                    <td class="pcNameColumn">PC5</td>
-                    <td class="totalDmgInfColumn">0</td>
-                    <td class="totalKillsColumn">0</td>
                 </tr>
             </table>
         </div>
