--- a/index.html
+++ b/index.html
@@ -13,31 +13,48 @@
     </div>
     <div id="top" class="main-section">
         <div id="initiative-tracker" class="left-side sub-main">
-            
-            <h3>
-                Initiative Tracker
-            </h3>
-
+            <div id="init-title" class="title bar">
+                <h3>
+                    Initiative Tracker
+                </h3>
+            </div>
+            <div id="init-input">
+                <div id="input">
+                    <div id="input-top">
+                        <div id="pc-type"></div>
+                        <div id="init-num">
+                            <label for="initiative">Init Roll:</label>
+                            <input type="number" class="numInput" id="initiative">
+                        </div>
+                    </div>
+                    <div id="input-bottom">
+                        <label for="characterName">Character:</label>
+                        <input type="text" id="characterName"> 
+                    </div>
+                </div>
+                <div id="add-button">
+                    <input type="submit" id="addToInit" value="Add to initiative" class="go-button">
+                </div>
+            </div>
+            <div id="current-init">
+                <h4 id="currentInitPosition"></h4>
+            </div>
+            <div id="cycle-reset">
+                <div id="next-button">
+                    <button id="nextInit" class="go-button">Next Initiative</button>
+                </div>
+                <div id="reset-button">
+                    <button id="resetInit" class="button-o-doom">Reset Initiative</button>
+                </div>
+            </div>
+            <!--
             <label for="initiative">Init Roll:</label>
             <input type="number" class="numInput" id="initiative">
-
             <label for="chartype">Type:</label>
             <select name="characterType" id="chartype">
 
-
-
-
-
-
-            <label for="characterName">Character:</label>
-            <input type="text" id="characterName">
-            <input type="submit" id="addToInit" value="Add to initiative">    
-        
-            <table id="initTable"></table>
-            <button id="nextInit">Next Initiative</button>
-            <h4 id="currentInitPosition"></h4>
             <button id="resetInit">Reset Initiative</button>
-        </div>
+        </div> -->
         <div id="damage-tracker" class="right-side sub-main">
             <h3> 
                 Damage Tracker
