moving more things arround. cleaning up html tag issues

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                 </tr>
             </table>
         </div>
-        <div id="dice-roller" class="right-side sub-main">Dice Roller</div>
-    </div>
+        <!-- <div id="dice-roller" class="right-side sub-main">Dice Roller</div> -->
+        </div>
     <div id="footer">
         <button id="resetAll">Reset ALL</button>
         <button id="dogShit">DOG SHIT</button>
