added some footer items

--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
         <!-- <div id="dice-roller" class="right-side sub-main">Dice Roller</div> -->
         </div>
     <div id="footer">
+        <a href="https://github.com/ci-wdi-900/final-project">Final Reqs</a>
+        <a href="https://github.com/JoshJHaines/combat-tracker">Project Repo</a>
+        <a href="https://www.linkedin.com/in/joshuajameshaines/">LinkedIn</a>
         <button id="resetAll">Reset ALL</button>
-        <button id="dogShit">DOG SHIT</button>
+        <!-- <button id="dogShit">DOG SHIT</button> -->
     </div>
 
     <script src="jsFiles/dataItems.js"></script>
