--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="header">
         <h1>Combat Tracker</h1>
+        <input type="text" id="addChar">
+        <button id="addCharButton" >Add Char</button>
     </div>
     <div id="top" class="main-section">
         <div id="initiative-tracker" class="left-side sub-main">
